Refactor error handling and improve report generation in HtmlReportGenerator
- Updated error handling in PureJUnitTest to differentiate between connection errors and other IO exceptions.
- Modified assertions in ReportGenerationTest to ensure the StableMock directory exists as a directory.
- Enhanced HtmlReportGenerator to shorten folder paths for better readability in reports and refined logic for handling empty strings in various methods.