@@ -245,6 +245,7 @@ public final class HtmlReportGenerator {
     private static void generateTestMethod(PrintWriter writer, JsonNode testMethod, String testClassName) {
         String testMethodName = testMethod.has("testMethod") ? testMethod.get("testMethod").asText() : "Unknown";
         String folderPath = testMethod.has("folderPath") ? testMethod.get("folderPath").asText() : "";
+        String shortFolderPath = shortenFolderPath(folderPath);
         int requestCount = countRequests(testMethod);
         int mutatingCount = countMutatingFields(testMethod);
         String filterText = String.join(" ", testClassName, testMethodName, folderPath).toLowerCase();
@@ -255,7 +256,7 @@ public final class HtmlReportGenerator {
         writer.println("          <span class=\"badge\">Requests: " + requestCount + "</span>");
         writer.println("          <span class=\"badge\">Mutating fields: " + mutatingCount + "</span>");
         writer.println("        </summary>");
-        writer.println("        <p class=\"folder-path\"><strong>Folder:</strong> <code>" + escapeHtml(folderPath) + "</code></p>");
+        writer.println("        <p class=\"folder-path\"><strong>Folder:</strong> <code>" + escapeHtml(shortFolderPath) + "</code></p>");
         
         // Handle single annotation
         if (testMethod.has("annotation")) {
@@ -390,7 +391,7 @@ public final class HtmlReportGenerator {
                     writer.println("                    <td><span class=\"method method-" + method.toLowerCase() + "\">" + escapeHtml(method) + "</span></td>");
                     writer.println("                    <td><code>" + escapeHtml(url) + "</code></td>");
                     writer.println("                    <td>" + count + "</td>");
-                    writer.println("                    <td>" + (hasBody ? "✓" : "—") + "</td>");
+                    writer.println("                    <td>" + (hasBody ? "&#10003;" : "&mdash;") + "</td>");
                     writer.println("                    <td>");
                     
                     if (request.has("mutatingFields") && request.get("mutatingFields").isArray()) {
@@ -403,10 +404,10 @@ public final class HtmlReportGenerator {
                             }
                             writer.println("                      </ul>");
                         } else {
-                            writer.println("                      —");
+                            writer.println("                      &mdash;");
                         }
                     } else {
-                        writer.println("                      —");
+                        writer.println("                      &mdash;");
                     }
                     
                     writer.println("                    </td>");
@@ -415,7 +416,7 @@ public final class HtmlReportGenerator {
                         writer.println("                      <button type=\"button\" class=\"details-toggle\" onclick=\"toggleRequestDetails('"
                                 + escapeHtmlAttribute(detailsId) + "')\">View details</button>");
                     } else {
-                        writer.println("                      —");
+                        writer.println("                      &mdash;");
                     }
                     writer.println("                    </td>");
                     writer.println("                  </tr>");
@@ -544,7 +545,7 @@ public final class HtmlReportGenerator {
 
     private static void renderBodyBlock(PrintWriter writer, String title, JsonNode bodyJson, String bodyText, JsonNode mutatingFields, String anchorPrefix) {
         if ((bodyJson == null || bodyJson.isMissingNode() || bodyJson.isNull())
-                && (bodyText == null || bodyText.isBlank())) {
+                && (bodyText == null || bodyText.trim().isEmpty())) {
             return;
         }
         writer.println("                            <div class=\"request-section\">");
@@ -576,10 +577,10 @@ public final class HtmlReportGenerator {
         // Highlight mutating fields if provided
         if (hasMutatingFields && bodyJson != null) {
             body = highlightMutatingFields(body, bodyJson, mutatingFields, anchorPrefix);
-        } else if (hasMutatingFields && isXml && bodyText != null) {
+        } else if (hasMutatingFields && isXml) {
             // For XML bodies, highlight mutating fields
             body = highlightXmlMutatingFields(bodyText, mutatingFields, anchorPrefix);
-        } else if (isXml && bodyText != null) {
+        } else if (isXml) {
             // For XML bodies without mutating fields, format and highlight syntax
             String formattedXml = formatXml(bodyText);
             body = buildXmlWithSyntaxHighlighting(formattedXml, null, null);
@@ -736,8 +737,8 @@ public final class HtmlReportGenerator {
         
         // Parse XML into DOM
         Document doc = XmlBodyParser.parseXml(xmlText);
-        if (doc == null) {
-            // Fallback to plain syntax highlighting if parsing fails
+        if (doc == null || doc.getDocumentElement() == null) {
+            // Fallback to plain syntax highlighting if parsing fails or document is malformed
             String formattedXml = formatXml(xmlText);
             return buildXmlWithSyntaxHighlighting(formattedXml, null, null);
         }
@@ -1073,8 +1074,8 @@ public final class HtmlReportGenerator {
     /**
      * Highlights an XML tag with attributes.
      * If mutatingAttributePaths is provided, wraps mutating attribute values in red highlighting.
-     * @param elementPathForTag The path of the element being rendered (e.g., "request/header"), 
-     *                          which is the correct path for attributes within this tag.
+     * @param elementPathForTag The element path for this tag (e.g., "request/header"),
+     *                          which represents the correct path for attributes within the tag being highlighted.
      */
     private static String highlightXmlTag(String tag, String elementPathForTag, 
             Set<String> mutatingElementPaths, Set<String> mutatingAttributePaths,
@@ -1128,7 +1129,7 @@ public final class HtmlReportGenerator {
      */
     private static String highlightXmlAttributes(String attributes, String currentElementPath,
             Set<String> mutatingAttributePaths, java.util.Map<String, String> attributePathToAnchorId) {
-        if (attributes == null || attributes.isBlank()) {
+        if (attributes == null || attributes.trim().isEmpty()) {
             return "";
         }
         
@@ -1263,7 +1264,7 @@ public final class HtmlReportGenerator {
     }
     
     private static boolean isJsonString(String text) {
-        if (text == null || text.isBlank()) {
+        if (text == null || text.trim().isEmpty()) {
             return false;
         }
         String trimmed = text.trim();
@@ -1272,7 +1273,7 @@ public final class HtmlReportGenerator {
     }
     
     private static boolean isXmlString(String text) {
-        if (text == null || text.isBlank()) {
+        if (text == null || text.trim().isEmpty()) {
             return false;
         }
         String trimmed = text.trim();
@@ -1391,6 +1392,35 @@ public final class HtmlReportGenerator {
 
     private static String escapeHtmlAttribute(String text) {
         return escapeHtml(text);
+    }
+
+    /**
+     * Shortens a folder path to show only the last 2 segments.
+     * Handles both Windows (\) and Unix (/) path separators.
+     */
+    private static String shortenFolderPath(String folderPath) {
+        if (folderPath == null || folderPath.trim().isEmpty()) {
+            return folderPath;
+        }
+        
+        // Normalize path separators to forward slash for processing
+        String normalized = folderPath.replace("\\", "/");
+        
+        // Remove trailing slashes
+        while (normalized.endsWith("/")) {
+            normalized = normalized.substring(0, normalized.length() - 1);
+        }
+        
+        // Split by forward slash
+        String[] segments = normalized.split("/");
+        
+        // If we have 2 or fewer segments, return as is
+        if (segments.length <= 2) {
+            return folderPath;
+        }
+        
+        // Return last 2 segments joined with backslash
+        return segments[segments.length - 2] + "\\" + segments[segments.length - 1];
     }
 
     private static String getCssStyles() {
@@ -1690,7 +1720,7 @@ public final class HtmlReportGenerator {
             .test-class > summary::before,
             .test-method > summary::before,
             .annotation-section > summary::before {
-              content: "▸";
+              content: ">";
               display: inline-block;
               margin-right: 6px;
               transition: transform 0.2s ease;
